--- a/12_Theme_Multi_Product_Option_2/Content/theme/css/style.css
+++ b/12_Theme_Multi_Product_Option_2/Content/theme/css/style.css
@@ -10,7 +10,7 @@ p { margin-bottom: 10px; line-height: 24px; }
 
 .container { position: relative; }
 
-body { line-height: 1.3; font-size: 14px; color: #333; font-weight: 400; font-style: normal; background: #f4f8fa; overflow-x: hidden; }
+body { line-height: 1.3; font-size: 14px; color: #333; font-weight: 400; font-style: normal; overflow-x: hidden; }
 body.open-nav-mobile { overflow: hidden; }
 body.open-nav-mobile header .header-menu { -ms-transform: translateX(0px); -webkit-transform: translateX(0px); transform: translateX(0px); }
 body.open-nav-mobile header .header-menu .container { padding: 0; }
@@ -112,7 +112,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .box-slide .item:hover { -webkit-box-shadow: 0px 5px 10px 0px rgba(138, 138, 145, 0.8); -moz-box-shadow: 0px 5px 10px 0px rgba(138, 138, 145, 0.8); box-shadow: 0px 5px 10px 0px rgba(138, 138, 145, 0.8); }
 .box-slide .item:hover .list-action a { visibility: visible; filter: alpha(opacity=100); -khtml-opacity: 1; -moz-opacity: 1; opacity: 1; transform: translate(0px, 0px); -ms-transform: translate(0px, 0px); -webkit-transform: translate(0px, 0px); }
 .box-slide .item .icon-top { position: absolute; top: 10px; left: 17px; z-index: 1; }
-.box-slide .item .images { height: 192px; display: block; }
+.box-slide .item .images { height: 300px; display: block; }
 .box-slide .item .images img { transition: all 0.35s ease-in-out 0s; -moz-transition: all 0.35s ease-in-out 0s; -o-transition: all 0.35s ease-in-out 0s; -webkit-transition: all 0.35s ease-in-out 0s; -ms-transition: all 0.35s ease-in-out 0s; max-height: 100%; margin: auto; display: block; width: auto; -webkit-transform-style: preserve-3d; transform-style: preserve-3d; }
 .box-slide .item .images:hover img { transform: rotateY(180deg); -webkit-transform: rotateY(180deg); -ms-transform: rotateY(180deg); -o-transform: rotateY(180deg); }
 .box-slide .item .detail { padding: 10px 0px; }
@@ -133,7 +133,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .box-prince .prince-new { color: #00a651; }
 .box-prince .prince-old { color: #999; font-size: 13px; font-style: italic; text-decoration: line-through; font-style: italic; }
 
-.box-slide-home { margin: 15px 0 0; }
+
 .box-slide-home .main-slide-home { margin-left: -10px; margin-right: -10px; overflow: hidden; clear: both; }
 .box-slide-home .main-slide-home .banner-slider, .box-slide-home .main-slide-home .banner-right { padding-left: 10px; padding-right: 10px; }
 .box-slide-home .main-slide-home .banner-slider { width: 66.66666667%; float: left; }
@@ -158,7 +158,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .box-slide-ads { margin-top: 20px; }
 
-.box-top-products { background: #f4f4f4; }
+
 
 .box-list-suggest { padding: 15px; }
 
