add fancy box, update css

--- a/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Home/Index.cshtml
@@ -129,10 +129,9 @@ else
                                                         <h5 class="product-name"><a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)">@item.PrName</a></h5>
                                                         @if (item.Price > 0)
                                                         {
-                                                            <div class="content_price">
-                                                                <span class="price product-price">@Anpero.StringHelpper.ConvertToVndMoney(item.Price) </span>
-
-                                                            </div>
+                                                    <div class="content_price">
+                                                        <span class="price product-price">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ") </span>
+                                                    </div>
                                                         }
                                                         @if (item.Warranty > 0)
                                                         {
