--- a/12_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -133,7 +133,7 @@
                                         </a>
                                     </h3>
                                     <div class="box-prince">
-                                        <span class="prince-new">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) ₫</span>
+                                        <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
                                     </div>
                                 </div>
                             </div>
@@ -207,7 +207,7 @@
                                         </a>
                                     </h3>
                                     <div class="box-prince">
-                                        <span class="prince-new">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) ₫</span>
+                                        <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
                                     </div>
                                 </div>
                             </div>
