--- a/12_Shop_MultiProduct/Views/Product/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Product/Index.cshtml
@@ -23,10 +23,13 @@
         <link rel="canonical" href="@ViewBag.WebsiteUrl" />
     }
     @section Styles {
+        <link href="//media.anpero.com/cdn/plugins/fancybox-3/src/css/core.css" rel="stylesheet" />
+        <link href="//media.anpero.com/cdn/plugins/fancybox-3/src/css/fullscreen.css" rel="stylesheet" />
         <style>
-            .qtyControl{
-                cursor:pointer;
+            .qtyControl {
+                cursor: pointer;
             }
+
             .box-social li {
                 display: inline-block;
                 margin-right: 10px;
@@ -57,7 +60,10 @@
             <ul class="hidden-sm hidden-xs">
                 <li><a href="/" title="Trang chủ">Trang chủ</a></li>
                 <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName, item.ParentId)" title="">@item.ParentCatName</a></li>
-                <li><a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
+                @if (!string.IsNullOrEmpty(item.CatName))
+                {
+                    <li><a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
+                }
                 <li><span>@item.PrName</span></li>
             </ul>
         </div>
@@ -74,14 +80,19 @@
                                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                             @{
-                                                <div class="carousel-item active">
-                                                    <img class="d-block w-100" src="@item.Images" alt="@item.PrName">
-                                                </div>
+                                                if (item.ImagesSlide == null || item.ImagesSlide.Length == 0)
+                                                {
+                                                    <div class="carousel-item active">
+                                                        <img class="d-block w-100" src="@item.Images" alt="@item.PrName">
+                                                    </div>
+                                                }
                                                 var slide = (string[])item.ImagesSlide;
                                                 for (var i = 0; i < slide.Length; i++)
                                                 {
-                                                    <div class="carousel-item">
-                                                        <img class="d-block w-100" src="@slide[i]" alt="@item.PrName">
+                                                    <div class="carousel-item @(i==0?"active":"")">
+                                                        <a href="@slide[i]" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image">
+                                                            <img  data-original="@slide[i]" class="d-block w-100" src="@slide[i]" alt="@item.PrName">
+                                                        </a>
                                                     </div>
                                                 }
                                             }
@@ -96,6 +107,14 @@
                                                 }
                                             }
                                         </ol>
+                                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -169,27 +188,27 @@
                                             <div class="content-right-price-info">
                                                 <ul class="list-policy">
                                                     @*<li class="item">
-                                                        <div class="box">
-                                                            <div class="icon">
-                                                                <img src="/html/images/icons/product_policy_1.png" alt="" width="" height="">
+                                                            <div class="box">
+                                                                <div class="icon">
+                                                                    <img src="/html/images/icons/product_policy_1.png" alt="" width="" height="">
+                                                                </div>
+                                                                <div class="detail">
+                                                                    <h5 class="title-policy">Giao hàng</h5>
+                                                                    <span class="text-policy">Miễn phí giao hàng nội thành Tp. HCM</span>
+                                                                </div>
                                                             </div>
-                                                            <div class="detail">
-                                                                <h5 class="title-policy">Giao hàng</h5>
-                                                                <span class="text-policy">Miễn phí giao hàng nội thành Tp. HCM</span>
+                                                        </li>
+                                                        <li class="item">
+                                                            <div class="box">
+                                                                <div class="icon">
+                                                                    <img src="/html/images/icons/product_policy_2.png" alt="" width="" height="">
+                                                                </div>
+                                                                <div class="detail">
+                                                                    <h5 class="title-policy">Sản phẩm</h5>
+                                                                    <span class="text-policy">Cam kết chính hãng 100% <br> Phát hiện hàng giả đền 200%</span>
+                                                                </div>
                                                             </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="item">
-                                                        <div class="box">
-                                                            <div class="icon">
-                                                                <img src="/html/images/icons/product_policy_2.png" alt="" width="" height="">
-                                                            </div>
-                                                            <div class="detail">
-                                                                <h5 class="title-policy">Sản phẩm</h5>
-                                                                <span class="text-policy">Cam kết chính hãng 100% <br> Phát hiện hàng giả đền 200%</span>
-                                                            </div>
-                                                        </div>
-                                                    </li>*@
+                                                        </li>*@
                                                     @if (item.Warranty > 0)
                                                     {
                                                         <li class="item">
@@ -326,7 +345,7 @@
                                                                 </a>
                                                             </h3>
                                                             <div class="box-prince">
-                                                                <span class="prince-new">@Anpero.StringHelpper.ConVertToMoneyFormatInt(relatedProduct.SalePrice) ₫</span>
+                                                                <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -342,10 +361,12 @@
             </div>
         </div>
         <!--box-item-product-->
-      
+
     </div>
 
     @section scripts{
+        <script src="//media.anpero.com/cdn/plugins/jquery.lazyload.min.js"></script>
+        <script src="//media.anpero.com/cdn/plugins/fancybox-3/dist/jquery.fancybox.min.js"></script>
         <script>
             var producText = {
                 available: "Available",
@@ -353,9 +374,17 @@
                 items: "items",
             };
 
-   
+
             $(document).ready(function () {
                 resizeVideo();
+                $(".fancybox").fancybox({
+                    openEffect: 'none',
+                    closeEffect: 'none'
+                });
+               $("img.lazy").lazyload({
+                  effect: "fadeIn"
+               });
+
                 $(window).resize(function () {
                     resizeVideo();
                 });
