--- a/12_Shop_MultiProduct/Views/Product/List.cshtml
+++ b/12_Shop_MultiProduct/Views/Product/List.cshtml
@@ -134,7 +134,7 @@
                                             </a>
                                         </h3>
                                         <div class="box-prince">
-                                            <span class="prince-new">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) ₫</span>
+                                            <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
                                         </div>
                                     </div>
                                 </div>
