--- a/12_Theme_Multi_Product_Option_2/Views/Product/Index.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Product/Index.cshtml
@@ -10,8 +10,9 @@
     ViewBag.WebsiteUrl = Request.Url.Scheme + System.Uri.SchemeDelimiter + Request.Url.Host +
         Anpero.StringHelpper.GetProductLink(item.PrName, item.Id);
     string currentUrl = Request.Url.Scheme + "://" + Request.Url.Authority + Request.ApplicationPath.TrimEnd('/');
+
     @section health{
-        <link rel="stylesheet" href="~/Content/theme/css/owl.carousel.min.css">
+        <link rel="stylesheet" href="~/html/css/owl.carousel.min.css">
         <meta name="description" content="@Anpero.StringHelpper.removeHtmlTangs(item.ShortDesc)" />
         <meta name="keywords" content="@Anpero.StringHelpper.UnicodeToKoDau(item.KeyWord)" />
         <meta property="og:description" content="@item.ShortDesc" />
@@ -22,6 +23,8 @@
         <link rel="canonical" href="@ViewBag.WebsiteUrl" />
     }
     @section Styles {
+        <link href="//media.anpero.com/cdn/plugins/fancybox-3/src/css/core.css" rel="stylesheet" />
+        <link href="//media.anpero.com/cdn/plugins/fancybox-3/src/css/fullscreen.css" rel="stylesheet" />
         <style>
             .qtyControl {
                 cursor: pointer;
@@ -57,7 +60,10 @@
             <ul class="hidden-sm hidden-xs">
                 <li><a href="/" title="Trang chủ">Trang chủ</a></li>
                 <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName, item.ParentId)" title="">@item.ParentCatName</a></li>
-                <li><a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
+                @if (!string.IsNullOrEmpty(item.CatName))
+                {
+                    <li><a href="@Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID)" title="">@item.CatName</a> </li>
+                }
                 <li><span>@item.PrName</span></li>
             </ul>
         </div>
@@ -74,14 +80,19 @@
                                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                                         <div class="carousel-inner">
                                             @{
-                                                <div class="carousel-item active">
-                                                    <img class="d-block w-100" src="@item.Images" alt="@item.PrName">
-                                                </div>
+                                                if (item.ImagesSlide == null || item.ImagesSlide.Length == 0)
+                                                {
+                                                    <div class="carousel-item active">
+                                                        <img class="d-block w-100" src="@item.Images" alt="@item.PrName">
+                                                    </div>
+                                                }
                                                 var slide = (string[])item.ImagesSlide;
                                                 for (var i = 0; i < slide.Length; i++)
                                                 {
-                                                    <div class="carousel-item">
-                                                        <img class="d-block w-100" src="@slide[i]" alt="@item.PrName">
+                                                    <div class="carousel-item @(i==0?"active":"")">
+                                                        <a href="@slide[i]" class="fancybox" data-fancybox="gallery" rel="gallery" data-type="image">
+                                                            <img data-original="@slide[i]" class="d-block w-100" src="@slide[i]" alt="@item.PrName">
+                                                        </a>
                                                     </div>
                                                 }
                                             }
@@ -96,6 +107,14 @@
                                                 }
                                             }
                                         </ol>
+                                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -169,33 +188,33 @@
                                             <div class="content-right-price-info">
                                                 <ul class="list-policy">
                                                     @*<li class="item">
-                                                        <div class="box">
-                                                            <div class="icon">
-                                                                <img src="/content/theme/images/icons/product_policy_1.png" alt="" width="" height="">
+                                                            <div class="box">
+                                                                <div class="icon">
+                                                                    <img src="/html/images/icons/product_policy_1.png" alt="" width="" height="">
+                                                                </div>
+                                                                <div class="detail">
+                                                                    <h5 class="title-policy">Giao hàng</h5>
+                                                                    <span class="text-policy">Miễn phí giao hàng nội thành Tp. HCM</span>
+                                                                </div>
                                                             </div>
-                                                            <div class="detail">
-                                                                <h5 class="title-policy">Giao hàng</h5>
-                                                                <span class="text-policy">Miễn phí giao hàng nội thành Tp. HCM</span>
+                                                        </li>
+                                                        <li class="item">
+                                                            <div class="box">
+                                                                <div class="icon">
+                                                                    <img src="/html/images/icons/product_policy_2.png" alt="" width="" height="">
+                                                                </div>
+                                                                <div class="detail">
+                                                                    <h5 class="title-policy">Sản phẩm</h5>
+                                                                    <span class="text-policy">Cam kết chính hãng 100% <br> Phát hiện hàng giả đền 200%</span>
+                                                                </div>
                                                             </div>
-                                                        </div>
-                                                    </li>
-                                                    <li class="item">
-                                                        <div class="box">
-                                                            <div class="icon">
-                                                                <img src="/content/theme/images/icons/product_policy_2.png" alt="" width="" height="">
-                                                            </div>
-                                                            <div class="detail">
-                                                                <h5 class="title-policy">Sản phẩm</h5>
-                                                                <span class="text-policy">Cam kết chính hãng 100% <br> Phát hiện hàng giả đền 200%</span>
-                                                            </div>
-                                                        </div>
-                                                    </li>*@
+                                                        </li>*@
                                                     @if (item.Warranty > 0)
                                                     {
                                                         <li class="item">
                                                             <div class="box">
                                                                 <div class="icon">
-                                                                    <img src="/content/theme/images/icons/product_policy_3.png" alt="" width="" height="">
+                                                                    <img src="/html/images/icons/product_policy_3.png" alt="" width="" height="">
                                                                 </div>
                                                                 <div class="detail">
                                                                     <h5 class="title-policy">Bảo hành</h5>
@@ -207,7 +226,7 @@
                                                     <li class="item">
                                                         <div class="box">
                                                             <div class="icon">
-                                                                <img src="/content/theme/images/icons/product_policy_4.png" alt="" width="" height="">
+                                                                <img src="/html/images/icons/product_policy_4.png" alt="" width="" height="">
                                                             </div>
                                                             <div class="detail">
                                                                 <h5 class="title-policy">Hỗ trợ</h5>
@@ -306,7 +325,7 @@
                                                         <div class="list-action">
                                                             <a href="https://www.facebook.com/sharer/sharer.php?u=@currentUrl" target="_blank" title="Chia sẻ với bạn bè" class="btn-quickview-1"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
                                                             <a href="@Anpero.StringHelpper.GetProductLink(relatedProduct.PrName,relatedProduct.Id)" title="@relatedProduct.PrName" class="view-product"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
-                                                            @if (item.IsInstock && item.Price>0)
+                                                            @if (item.IsInstock)
                                                             {
                                                                 <a href="javascript:Cart.addProduct(@relatedProduct.Id,'@Convert.ToInt32(relatedProduct.IsSale?item.SalePrice:item.Price)','@relatedProduct.Images','@relatedProduct.PrName')" class="add-cart" title="Mua hàng">
                                                                     <i class="fa fa-shopping-bag" aria-hidden="true"></i>
@@ -342,10 +361,12 @@
             </div>
         </div>
         <!--box-item-product-->
-      
+
     </div>
 
     @section scripts{
+        <script src="//media.anpero.com/cdn/plugins/jquery.lazyload.min.js"></script>
+        <script src="//media.anpero.com/cdn/plugins/fancybox-3/dist/jquery.fancybox.min.js"></script>
         <script>
             var producText = {
                 available: "Available",
@@ -356,6 +377,14 @@
 
             $(document).ready(function () {
                 resizeVideo();
+                $(".fancybox").fancybox({
+                    openEffect: 'none',
+                    closeEffect: 'none'
+                });
+               $("img.lazy").lazyload({
+                  effect: "fadeIn"
+               });
+
                 $(window).resize(function () {
                     resizeVideo();
                 });
@@ -379,7 +408,7 @@
             });
             $(".group-qty .minus").click(function () {
                 var newQty = (parseInt($("#pdQuantity").val()) - 1);
-                $("#pdQuantity").val(newQty < 1 ? 1 : newQty);
+                $("#pdQuantity").val(newQty<0?0:newQty);
             });
             function resizeVideo() {
                 var contentW = $('#product_tabs_description').width();
@@ -390,43 +419,7 @@
                 iframe.css('height', iframeH);
             }
         </script>
-        <script type="application/ld+json">
-            {
-            "@@context": "http://schema.org",
-            "@@type": "BreadcrumbList",
-            "itemListElement": [{
-            "@@type": "ListItem",
-            "position": 1,
-            "item": {
-            "@@id": "@currentUrl",
-            "name": "Trang chủ"
-            }
-            },{
-            "@@type": "ListItem",
-            "position": 2,
-            "item": {
-            "@@id": "@(currentUrl + Anpero.StringHelpper.GetParentCategoryLink(item.ParentCatName, item.ParentId))",
-            "name": "@(string.IsNullOrEmpty(item.ParentCatName) ? "Sản phẩm" : item.ParentCatName)"
-            }
-            },{
-            "@@type": "ListItem",
-            "position": 3,
-            "item": {
-            "@@id": "@(currentUrl + Anpero.StringHelpper.GetCategoryLink(item.CatName, item.CatID))",
-            "name": "@(string.IsNullOrEmpty(item.CatName) ? "Sản phẩm" : item.CatName)"
-            }
-            },{
-            "@@type": "ListItem",
-            "position": 4,
-            "item": {
-            "@@id": "@Request.Url.AbsoluteUri",
-            "name": "@item.PrName"
-            }
-            }
-            ]
-            }
-        </script>
-        @{ 
+        @{
             List<string> images = new List<string>();
             images.Add(item.Images);
             images.AddRange(item.ImagesSlide);
