--- a/12_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/12_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -40,7 +40,9 @@
                                     for (var i = 0; i < slide.Length; i++)
                                     {
                                         <div class="carousel-item @(i == 0 ? "active" : "")">
-                                            <img class="d-block w-100" src="@slide[i].ImagesUrl" alt="@slide[i].Description">
+                                            <a href="@slide[i].ClickUrl">
+                                                <img class="d-block w-100" src="@slide[i].ImagesUrl" alt="@slide[i].Description">
+                                            </a>
                                         </div>
                                     }
                                 }
@@ -99,7 +101,7 @@
 
                 }
             </div>
-            </div>
+        </div>
     </div>
     <!--box-slide-ads-->
 }
@@ -253,7 +255,7 @@
 }
 @if (ViewData["FeatureArticle"] != null)
 {
-     SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
+    SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
     <div class="box-news">
         <div class="container">
             <div class="box-title-new">
@@ -276,7 +278,7 @@
                                 </div>
                                 <ul class="info-new">
                                     <li class="time"><i class="fa fa-calendar" aria-hidden="true"></i> <time>@Anpero.StringHelpper.ConvertDateTime(item.CreateDate).ToString("dd/mm/yyyy")</time></li>
-                                    
+
                                     <li class="post"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>@item.CategoryName</span></li>
                                 </ul>
                             </div>
