--- a/12_Theme_Multi_Product_Option_2/Views/Shared/_partial/_HeaderPartial.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Shared/_partial/_HeaderPartial.cshtml
@@ -74,14 +74,9 @@
     <nav class="header-menu">
         <div class="container">
             <ul class="nav-navbar">
-                <li class="active">
-                    <a href="#" class=" current" title="Trang chủ">
+                <li class="active  li-child">
+                    <a href="#" class="current" title="Trang chủ">
                         <span>Trang chủ</span>
-                    </a>
-                </li>
-                <li class="li-child">
-                    <a href="#" title="" class="">
-                        <span>Sản phẩm</span> <i class="fa fa-angle-down" aria-hidden="true"></i>
                     </a>
                     <ul class="main-child level-2">
 
@@ -89,36 +84,36 @@
                         {
                             foreach (var item in commonInfo.ProductCategoryList)
                             {
-                        <li class="li-child">
+                                <li class="li-child">
 
-                            @if (item.ChildCategory != null && item.ChildCategory.Length > 0)
-                            {
-                                <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" class="m-nav" title="@item.Name">
-                                    <span>@item.Name</span>                                    
-                                    <i class="fa fa-angle-right" aria-hidden="true"></i>                                    
-                                </a>
-                                <ul class="main-child level-3">
-                                    @foreach (var childItem in item.ChildCategory)
+                                    @if (item.ChildCategory != null && item.ChildCategory.Length > 0)
                                     {
-                                        <li class="">
-                                            <a href="@Anpero.StringHelpper.GetParentCategoryLink(childItem.Name,childItem.Id)" title=""><span>@childItem.Name</span></a>
-                                        </li>
+                                        <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" class="m-nav" title="@item.Name">
+                                            <span>@item.Name</span>
+                                            <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                        </a>
+                                        <ul class="main-child level-3">
+                                            @foreach (var childItem in item.ChildCategory)
+                                            {
+                                                <li class="">
+                                                    <a href="@Anpero.StringHelpper.GetParentCategoryLink(childItem.Name,childItem.Id)" title=""><span>@childItem.Name</span></a>
+                                                </li>
+                                            }
+
+                                        </ul>
+                                    }
+                                    else
+                                    {
+                                        <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" class="" title="@item.Name">
+                                            <span>@item.Name</span>
+                                        </a>
                                     }
 
-                                </ul>
-                            }
-                            else
-                            {
-                                <a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" class="" title="@item.Name">
-                                    <span>@item.Name</span>                                  
-                                </a>
-                            }
-
-                        </li>
+                                </li>
                             }
                         }
                     </ul>
-                </li>
+                </li>         
                 @if (commonInfo.MenuList != null && commonInfo.MenuList.Length > 0)
                 {
                     foreach (var item in commonInfo.MenuList)
