--- a/12_Theme_Multi_Product_Option_2/Views/Product/List.cshtml
+++ b/12_Theme_Multi_Product_Option_2/Views/Product/List.cshtml
@@ -137,6 +137,10 @@
                                         </h3>
                                         <div class="box-prince">
                                             <span class="prince-new">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
+                                            @if (item.IsSale)
+                                            {
+                                                <span class="prince-old">@(item.Price == 0 ? "liên hệ" : Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) + " đ")</span>
+                                            }
                                         </div>
                                     </div>
                                 </div>
